--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "keywords": [
     "guppy",
+    "git-guppy",
+    "guppy-hook",
     "prepare-commit-msg"
   ],
   "author": "Kevin Lanni (https://github.com/therealklanni)",
